--- a/docs/visual-basic/misc/bc32080.md
+++ b/docs/visual-basic/misc/bc32080.md
@@ -1,5 +1,5 @@
 ---
-title: 제네릭 메서드를 사용할 수 없습니다 &#39;처리&#39; 절
+title: 제네릭 메서드에서는 'Handles' 절을 사용할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32080
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC32080
 ms.assetid: 88c62a1c-aee3-46b2-ad78-76790022c04c
-ms.openlocfilehash: 4fe98b1b813684d462c1cc81ce452e613c30993a
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c357c028eaa796fedd837beb47281117a1436bb3
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33629771"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53763879"
 ---
-# <a name="generic-methods-cannot-use-39handles39-clause"></a>제네릭 메서드를 사용할 수 없습니다 &#39;처리&#39; 절
+# <a name="generic-methods-cannot-use-handles-clause"></a>제네릭 메서드에서는 'Handles' 절을 사용할 수 없습니다.
 제네릭 `Sub` 프로시저의 선언에 [Handles](../../visual-basic/language-reference/statements/handles-clause.md) 절이 포함되어 있습니다.  
   
- `Handles` 절은 `Sub` 프로시저가 처리하는 이벤트 목록을 지정합니다. 이벤트 처리기로 사용하려면 처리할 각 이벤트와 동일한 서명이 `Sub` 프로시저에 있어야 합니다. Visual Basic 컴파일 시간에 예측할 수 없는 서명을 사용 하 여 제네릭 프로시저를 두 번 이상 만들 수 있습니다. Visual Basic 보장할 수의 이벤트와 일치 하는 서명을 `Handles` 절.  
+ `Handles` 절은 `Sub` 프로시저가 처리하는 이벤트 목록을 지정합니다. 이벤트 처리기로 사용하려면 처리할 각 이벤트와 동일한 서명이 `Sub` 프로시저에 있어야 합니다. Visual Basic 컴파일 시간에 예측할 수 없는 서명을 가진 제네릭 프로시저를 두 번 이상 만들 수 있습니다. Visual Basic의 이벤트를 일치 하는 시그니처를 보장할 수 없기는 `Handles` 절.  
   
  **오류 ID:** BC32080  
   
@@ -25,8 +25,8 @@ ms.locfileid: "33629771"
   
 -   `Sub` 프로시저가 제네릭이어야 하는 경우 해당 선언에서 `Handles` 절을 제거합니다. [AddHandler Statement](../../visual-basic/language-reference/statements/addhandler-statement.md) 을 사용하여 이 이벤트 처리기를 이벤트와 연결합니다.  
   
--   경우는 `Sub` 사용 해야 하는 프로시저는 `Handles` 절, 제거 하거나, 이벤트를 연결는 [의](../../visual-basic/language-reference/statements/of-clause.md) 해당 선언에서 절. `Handles`를 사용할 때는 제네릭이 아닌 프로시저를 사용해야 합니다.  
+-   `Sub` 프로시저에서 `Handles` 절을 사용하여 이벤트를 연결해야 하는 경우 해당 선언에서 [Of](../../visual-basic/language-reference/statements/of-clause.md) 절을 제거합니다. `Handles`를 사용할 때는 제네릭이 아닌 프로시저를 사용해야 합니다.  
   
 ## <a name="see-also"></a>참고 항목  
- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
  [이벤트(Visual Basic)](~/docs/visual-basic/programming-guide/language-features/events/index.md)
