--- a/docs/visual-basic/misc/bc32087.md
+++ b/docs/visual-basic/misc/bc32087.md
@@ -1,5 +1,5 @@
 ---
-title: 오버 로드 확인에 실패 했습니다 액세스 가능한 &#39; &lt;지정한&gt; &#39; 지정한이 개수의 형식 인수를 허용 합니다.
+title: 오버 로드 확인에 실패 했습니다 액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc32087
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32087
 ms.assetid: a3eaafd3-80f6-4b7d-9b75-47b043fe17b5
-ms.openlocfilehash: fa25b62ff22cf346391a09e8adf001fb6ab623d0
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 7ab52012b00577f214dc87bb1358a2094cf878cd
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630616"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53770028"
 ---
-# <a name="overload-resolution-failed-because-no-accessible-39ltgenericprocedurenamegt39-accepts-this-number-of-type-arguments"></a>오버 로드 확인에 실패 했습니다 액세스 가능한 &#39; &lt;지정한&gt; &#39; 지정한이 개수의 형식 인수를 허용 합니다.
+# <a name="overload-resolution-failed-because-no-accessible-ltgenericprocedurenamegt-accepts-this-number-of-type-arguments"></a>오버 로드 확인에 실패 했습니다 액세스 가능한 '&lt;genericprocedurename&gt;'이 개수의 형식 인수를 허용 합니다.
 컴파일러가 적절한 개수의 형식 매개 변수를 사용하여 오버로드된 버전에 액세스할 수 없으므로 오버로드된 제네릭 프로시저 호출을 확인할 수 없습니다.  
   
  제네릭 프로시저를 호출하는 경우 각 형식 매개 변수에 대해 하나의 형식 인수를 제공해야 합니다. 또는 형식 인수를 제공하지 않고 컴파일러에서 *형식 유추*를 수행하도록 할 수 있습니다. 자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)의 "형식 유추"를 참조하세요.  
@@ -27,12 +27,12 @@ ms.locfileid: "33630616"
   
 2.  형식 인수 목록이 호출하려는 버전의 형식 매개 변수 목록과 일치하도록 호출 코드에서 형식 인수를 추가하거나 제거합니다.  
   
-     -또는-  
+     또는  
   
      호출 코드에서 모든 형식 인수를 제거하고 컴파일러에서 형식 유추를 수행하도록 합니다. 충돌 또는 모호성이 있을 경우 형식 유추에 실패할 수 있습니다.  
   
 ## <a name="see-also"></a>참고 항목  
  [오버로드된 속성 및 메서드](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)  
  [오버로드 확인](../../visual-basic/programming-guide/language-features/procedures/overload-resolution.md)  
- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
  [형식 목록](../../visual-basic/language-reference/statements/type-list.md)
