--- a/docs/visual-basic/misc/bc40050.md
+++ b/docs/visual-basic/misc/bc40050.md
@@ -1,5 +1,5 @@
 ---
-title: 대리자 형식의 &#39; &lt;delegatename&gt; &#39; 이벤트의 &#39; &lt;eventname&gt; &#39; CLS 규격이 아닙니다
+title: 대리자 형식 '&lt;delegatename&gt;'의 '이벤트&lt;eventname&gt;' CLS 규격이 아님
 ms.date: 07/20/2015
 f1_keywords:
 - bc40050
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC40050
 ms.assetid: 92f5be26-9a82-46d4-bf97-005f2c7ca424
-ms.openlocfilehash: 91555a290938b975038394f0345def8f08232654
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 1fba057505a829c3a0a3f55d263b570679e4148b
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33633841"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53765244"
 ---
-# <a name="delegate-type-39ltdelegatenamegt39-of-event-39lteventnamegt39-is-not-cls-compliant"></a>대리자 형식의 &#39; &lt;delegatename&gt; &#39; 이벤트의 &#39; &lt;eventname&gt; &#39; CLS 규격이 아닙니다
-[Event 문](../../visual-basic/language-reference/statements/event-statement.md) 대리자를 사용 하 여 해당 서명을 지정 하지만 [Delegate 문은](../../visual-basic/language-reference/statements/delegate-statement.md) 로 표시 되어 `<CLSCompliant(False)>` 되거나 표시 되지 않습니다.  
+# <a name="delegate-type-ltdelegatenamegt-of-event-lteventnamegt-is-not-cls-compliant"></a>대리자 형식 '&lt;delegatename&gt;'의 '이벤트&lt;eventname&gt;' CLS 규격이 아님
+[Event Statement](../../visual-basic/language-reference/statements/event-statement.md) 이 대리자를 사용하여 해당 서명을 지정하지만 [Delegate Statement](../../visual-basic/language-reference/statements/delegate-statement.md) 이 `<CLSCompliant(False)>` 로 표시되거나 표시되지 않습니다.  
   
  <xref:System.CLSCompliantAttribute> 특성을 프로그래밍 요소에 적용하는 경우 특성의 `isCompliant` 매개 변수를 `True` 또는 `False` 로 설정하여 준수 여부를 나타냅니다. 이 매개 변수에는 기본값이 없으며 값을 제공해야 합니다.  
   
