--- a/docs/visual-basic/misc/bc42022.md
+++ b/docs/visual-basic/misc/bc42022.md
@@ -1,5 +1,5 @@
 ---
-title: 지정 하지 않고 속성은 &#39;으로&#39; 절이 없습니다. Object 형식으로 간주
+title: 속성에 'As' 절이 없습니다. Object 형식으로 간주합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - BC42022
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC42022
 ms.assetid: 3379692b-8278-4488-878a-0afb76e554b1
-ms.openlocfilehash: b3ce4e2f666b6d74805996a5acfb3df288aac231
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 714ceef98d2578565e8431712c08b63f722da242
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33634958"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53766632"
 ---
-# <a name="property-without-an-39as39-clause-type-of-object-assumed"></a>지정 하지 않고 속성은 &#39;으로&#39; 절이 없습니다. Object 형식으로 간주
+# <a name="property-without-an-as-clause-type-of-object-assumed"></a>속성에 'As' 절이 없습니다. Object 형식으로 간주합니다.
 속성 선언에서 `As` 절을 지정하지 않습니다.  
   
- `As` 절은 프로그래밍 요소와 연결될 데이터 형식을 식별합니다. 에 [Property 문](../../visual-basic/language-reference/statements/property-statement.md), 값의 데이터 형식을 지정 하는 속성의 `Get` 프로시저가 호출 코드에 반환 합니다. `As` 문에 `Property` 절을 포함하지 않으면 속성의 데이터 형식이 기본적으로 `Object`로 설정됩니다.  
+ `As` 절은 프로그래밍 요소와 연결될 데이터 형식을 식별합니다. [Property Statement](../../visual-basic/language-reference/statements/property-statement.md)에서는 속성의 `Get` 프로시저가 호출 코드에 반환하는 값의 데이터 형식을 지정합니다. `As` 문에 `Property` 절을 포함하지 않으면 속성의 데이터 형식이 기본적으로 `Object`로 설정됩니다.  
   
- 이 메시지는 기본적으로 경고입니다. 경고를 숨기 거 나 경고를 오류로 처리 하는 방법에 대 한 자세한 내용은 참조 [Visual Basic에서 경고 구성](/visualstudio/ide/configuring-warnings-in-visual-basic)합니다.  
+ 이 메시지는 기본적으로 경고입니다. 경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.  
   
  **오류 ID:** BC42022  
   
