--- a/docs/visual-basic/misc/bc42311.md
+++ b/docs/visual-basic/misc/bc42311.md
@@ -1,5 +1,5 @@
 ---
-title: 'XML 문서 파일을 만들 수 없습니다 &#39; &lt;이름&gt;&#39;: &lt;메시지&gt;'
+title: "XML 문서 파일을 만들 수 없습니다. '&lt;이름을&gt;': &lt;메시지&gt;"
 ms.date: 07/20/2015
 f1_keywords:
 - bc42311
@@ -7,35 +7,35 @@ f1_keywords:
 helpviewer_keywords:
 - BC42311
 ms.assetid: ecf238a0-902e-404a-bd9a-5f31e0c36fba
-ms.openlocfilehash: 5540eed269dcc4e00b6a90188d67609857e49e43
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 3a0e9a1f78f48506977a7a50f0132b7177f573b3
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33639109"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53764945"
 ---
-# <a name="unable-to-create-xml-documentation-file-39ltnamegt39-ltmessagegt"></a>XML 문서 파일을 만들 수 없습니다 &#39; &lt;이름&gt;&#39;: &lt;메시지&gt;
+# <a name="unable-to-create-xml-documentation-file-ltnamegt-ltmessagegt"></a>XML 문서 파일을 만들 수 없습니다. '&lt;이름을&gt;': &lt;메시지&gt;
 오류로 인해 XML 문서 파일을 만들 수 없습니다.  
   
  **오류 ID:** BC42311  
   
  이 오류와 함께 다음과 같은 메시지가 나타날 수 있습니다.  
   
--   [XML 주석 블록을 XML 문서 주석의 응용이 지원되는 언어 요소와 연결할 수 없습니다.](../../visual-basic/misc/bc42312.md).  
+-   [XML 주석 블록을 XML 문서 주석의 응용이 지원되는 언어 요소와 연결할 수 없습니다](../../visual-basic/misc/bc42312.md).  
   
--   [XML 주석 태그 'returns'는 'WriteOnly' 속성에 사용할 수 없습니다.](../../visual-basic/misc/bc42313.md).  
+-   [XML 주석 태그 'returns'는 'WriteOnly' 속성에 사용할 수 없습니다](../../visual-basic/misc/bc42313.md).  
   
 -   [부분에 XML 주석을 두 번 이상 적용할 수 없습니다 \<유형 >](../../visual-basic/misc/bc42314.md)합니다.  
   
--   [XML 주석 태그 'returns'는 'declare sub' 언어 요소에서 사용할 수 없습니다.](../../visual-basic/misc/bc42315.md).  
+-   [XML 주석 태그 'returns'는 'declare sub' 언어 요소에서 사용할 수 없습니다](../../visual-basic/misc/bc42315.md).  
   
 -   [XML 문서 구문 분석 오류: 시작 태그 '\<태그 >'는 짝이 되는 끝 태그가](../../visual-basic/misc/bc42316.md)합니다.  
   
--   [XML 주석 형식 매개 변수에 \<매개 변수 >는 해당 형식 매개 변수와 일치 하지 않는 \<키워드 > 문을](../../visual-basic/misc/bc42317.md)합니다.  
+-   [XML 주석 형식 매개 변수에 \<매개 변수 > 해당 형식 매개 변수와 일치 하지 않습니다 \<키워드 > 문을](../../visual-basic/misc/bc42317.md)합니다.  
   
--   [XML 주석 형식 매개 변수에는 'name' 특성이 있어야 합니다.](../../visual-basic/misc/bc42318.md).  
+-   [XML 주석 형식 매개 변수에는 'name' 특성이 있어야 합니다](../../visual-basic/misc/bc42318.md).  
   
--   [XML 주석 예외에는 'cref' 특성이 있어야 합니다.](../../visual-basic/language-reference/error-messages/xml-comment-exception-must-have-a-cref-attribute.md).  
+-   [XML 주석 예외에는 'cref' 특성이 있어야 합니다](../../visual-basic/language-reference/error-messages/xml-comment-exception-must-have-a-cref-attribute.md).  
   
 ## <a name="to-correct-this-error"></a>이 오류를 해결하려면  
   
